--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
     "build": "nitro build",
     "dev": "nitro dev",
     "prepare": "nitro prepare",
-    "preview": "node .output/server/index.mjs"
+    "preview": "node .output/server/index.mjs",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@solana/web3.js": "^1.98.2",
-    "ethers": "6.14.3"
+    "ethers": "6.14.3",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0"
   },
   "devDependencies": {
     "nitropack": "latest"
