--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.2",
+    "@supabase/supabase-js": "^2.54.0",
     "ethers": "6.15.0",
+    "nuxt": "^4.0.3",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
-    "tweetnacl": "^1.0.3"
+    "tweetnacl": "^1.0.3",
+    "vue": "^3.5.18"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "nitropack": "latest"
   }
 }
