--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.2",
     "@supabase/supabase-js": "^2.54.0",
+    "chart.js": "^4.5.0",
     "ethers": "6.15.0",
     "nuxt": "^4.0.3",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "tweetnacl": "^1.0.3",
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "vue-chartjs": "^5.3.2"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0",
+    "@types/chart.js": "^2.9.41",
     "nitropack": "latest"
   }
 }
